--- a/_config.yml
+++ b/_config.yml
@@ -107,10 +107,10 @@ analytics:
 
 # Site Author
 author:
-  name             : "Your Name"
+  name             : "Dunder & Mifflin"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "I am an **amazing** person."
-  location         : "Somewhere"
+  bio              : "a.k.a. Dad & Mom, captors"
+  location         : "LA, CA"
   email            :
   links:
     - label: "Email"
