--- a/_config.yml
+++ b/_config.yml
@@ -299,8 +299,8 @@ defaults:
       type: pages
     values:
       layout: single
-      author_profile: true
-      read_time: true
+      author_profile: false
+      read_time: false
       comments: # true
-      share: true
-      related: true
+      share: false
+      related: false
