--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,8 +2,8 @@
 main:
   # - title: "ALL the photos"
     # url: https://www.amazon.com/photos/shared/hFvMNamiQveuy8OyGkEs9g.vTzaa1WKwNxPoD4F5_njDS?sort=sortOldestToNewest
-  # - title: "About"
-  #   url: https://mmistakes.github.io/minimal-mistakes/about/
+  - title: "Kittens"
+    url: /kittens/
   # - title: "Sample Posts"
   #   url: /year-archive/
   # - title: "Sample Collections"
